--- a/module23/palmetto-app/pom.xml
+++ b/module23/palmetto-app/pom.xml
@@ -44,7 +44,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.vaadin.external.google</groupId>
+			<artifactId>android-json</artifactId>
+			<version>0.0.20131108.vaadin1</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
