--- a/module23/client-app/pom.xml
+++ b/module23/client-app/pom.xml
@@ -59,6 +59,21 @@
 			<version>1.18.24</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.vaadin.external.google</groupId>
+			<artifactId>android-json</artifactId>
+			<version>0.0.20131108.vaadin1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>5.3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+		</dependency>
 		<!--		<dependency>-->
 <!--			<groupId>org.activiti</groupId>-->
 <!--			<artifactId>activiti-engine</artifactId>-->
