--- a/module332/module33/pom.xml
+++ b/module332/module33/pom.xml
@@ -64,6 +64,22 @@
 			<artifactId>htmlunit-driver</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-client</artifactId>
+<!--			<version>7.7.1</version>-->
+		</dependency>
+
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+<!--			<version>7.7.1</version>-->
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-elasticsearch</artifactId>
+<!--			<version>3.2.5.RELEASE</version>-->
+		</dependency>
 
 
 	</dependencies>
